Add basic styling to header

--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Special Design</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/master.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
     
+    <!-- Start landing page -->
+    <div class="landing-page">
+        <div class="overlay"></div>
+
+        <div class="header-area">
+            <div class="logo">Special Design</div>
+            <ul class="links">
+                <li>About</li>
+                <li>Service</li>
+                <li>Products</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+
+        <div class="introduction-text">
+            <h1>We are creative Agency</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis omnis incidunt saepe enim!</p>
+        </div>
+    </div>
+
+    <script src="js/master.js"></script>
 </body>
 </html>
